force-app/main/default/objects/KLWSpecStages__mdt/KLWSpecStages__mdt.object-meta.xml
<CustomObject>
    <label>KLWSpecStages</label>
    <pluralLabel>KLWSpecStages</pluralLabel>
</CustomObject>