force-app/main/default/objects/KLWSpecStages__mdt/fields/LabelEN__c.field-meta.xml
<CustomField>
    <fullName>LabelEN__c</fullName>
    <label>LabelEN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>