force-app/main/default/objects/KLWSpecStages__mdt/fields/LabelRU__c.field-meta.xml
<CustomField>
    <fullName>LabelRU__c</fullName>
    <label>LabelRU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>