force-app/main/default/objects/KLWSpecStages__mdt/fields/LabelUA__c.field-meta.xml
<CustomField>
    <fullName>LabelUA__c</fullName>
    <label>LabelUA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>