force-app/main/default/objects/KLWSpecStages__mdt/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <label>ShortName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>